--- a/package.json
+++ b/package.json
@@ -43,12 +43,12 @@
     "redux-localstorage-simple": "^2.3.1",
     "styled-components": "^5.1.1",
     "typescript": "^3.9.7",
-    "use-wallet": "^0.13.1",
+    "use-wallet": "OGBoogieTomb/use-wallet",
     "web3": "^1.2.11"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "CI= GENERATE_SOURCEMAP=false react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
