--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Aaron <aaron@1coin.io>",
   "license": "MIT",
   "dependencies": {
+    "@davatar/react": "^1.8.1",
     "@ethersproject/providers": "^5.4.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.30",
     "@fortawesome/free-solid-svg-icons": "^5.14.0",
